# CGL

./: CMakeLists.txt  readme.md
src/: glad.c  halfLambert.frag  main.c  model.c  model.h  passthru.vert  shader.c  shader.h
src/glad/: glad.h
